tests/diag/call-in-value.wisp
surface bar {
  widget clock {
    text = cpu();
  }
}
